--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     "target": "es2021",
     "module": "commonjs",
     "lib": [
-      "es2021"
+      "es2021",
+      "dom"
     ],
     "sourceMap": true,
     "outDir": "./dist",
