--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "src/index.js",
   "scripts": {
     "lint": "eslint './src/**'",
-    "lint-fix": "npm run lint --fix"
+    "lint-fix": "npm run lint -- --fix"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.20.0",
@@ -14,7 +14,6 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.1.0",
     "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-vue": "^8.7.1",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   }
