--- a/package.json
+++ b/package.json
@@ -3,17 +3,12 @@
   "version": "1.0.0",
   "main": "src/index.js",
   "scripts": {
-    "lint": "eslint './src/**'",
-    "lint-fix": "npm run lint -- --fix"
+    "lint": "npm run biome -- lint ./src",
+    "lint-fix": "npm run biome -- check --apply ./src"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.20.0",
-    "@typescript-eslint/parser": "^5.20.0",
-    "eslint": "^8.13.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.1.0",
-    "eslint-plugin-promise": "^6.0.0",
+    "@biomejs/biome": "1.4.1",
+    "biome": "^0.3.3",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   }
