--- a/biome.json
+++ b/biome.json
@@ -17,7 +17,7 @@
     "formatWithErrors": true,
     "indentStyle": "space",
     "indentWidth": 2,
-    "lineEnding": "crlf"
+    "lineEnding": "lf"
   },
 
   "javascript": {
